--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <h1>hello world</h1>
-<p>webサイトが表示されるまでの流れ〜webサーバーDNCサーバーまで〜</p>
+<p>webサイトが表示されるまでの流れ〜webサーバーDNSサーバーまで〜</p>
 <img src="i2124077.png">
